# IntegralSH

./: .gitmodules  CMakeLists.txt  README.md
include/: AxialMoments.hpp  DirectionsSampling.hpp  SHRotation.hpp  SphericalHarmonics.hpp  SphericalIntegration.hpp  Utils.hpp
scripts/: PlotMaterial.py  ProjectMaterials.py
tests/: ArvoMoments.hpp  MomentsEquals.cpp  MomentsSign.cpp  MomentsVsArvo.cpp  MomentsVsMC.cpp  SH.hpp  SphericalH.cpp  SphericalInt.cpp  TestMerl.cpp  TestMoments.cpp  TestProduct.cpp  TestRotations.cpp  TestUtils.cpp  Tests.hpp  Timings.cpp  UnitIntegral.cpp
utils/: Alta2Sh.cpp  IntegralConvergence.cpp  Merl.hpp  Merl2Sh.cpp
